<resources>
    <string name="app_name">PHUL</string>
    <string name="upper_power">Upper Power</string>
    <string name="lower_power">Lower Power</string>
    <string name="upper_hypertrophy">Upper Hypertrophy</string>
    <string name="lower_hypertrophy">Lower Hypertrophy</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="day_name">Day Name</string>
    <string name="barbell_bench_press">Barbell Bench Press</string>
    <string name="dumbbell_incline_bench_press">Dumbbell Incline Bench Press</string>
    <string name="barbell_row">Barbell Row</string>
    <string name="lat_pulldown">Lat Pulldown</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="barbell_curl">Barbell Curl</string>
    <string name="skullcrushers">Skullcrushers</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="leg_press">Leg Press</string>
    <string name="leg_curl">Leg Curl</string>
    <string name="calf">Calf Exercise</string>
    <string name="inc_bb_press">Incline Barbell Bench Press</string>
    <string name="chest_fly">Chest Fly</string>
    <string name="cable_row">Seated Cable Row</string>
    <string name="one_arm_dumbbell_row">One Arm Dumbbell Row</string>
    <string name="dumbbell_lateral_raise">Dumbbell Lateral Raise</string>
    <string name="seated_incline_dumbbell_curl">Seated Incline Dumbbell Curl</string>
    <string name="cable_triceps_extension">Cable Triceps Extension</string>
    <string name="lunge">Lunge</string>
    <string name="leg_extension">Leg Extension</string>
    <string name="seated_calf_raise">Seated Calf Raise</string>
    <string name="calf_press">Calf Press</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="compound_details">3–4 x 3–5, 3 min rest</string>
    <string name="sec_compound_details">3–4 x 6–10, 1 min 30 sec rest</string>
    <string name="ohp_details">2–3 x 5–8, 1 min 30 sec rest</string>
    <string name="arm_accessory_details">2–3 x 6–10, 1 min 30 sec rest</string>
    <string name="leg_press_details">3–5 x 10–15, 1 min 30 sec rest</string>
    <string name="leg_curl_power_details">3–4 x 6–10, 1 min 30 sec rest</string>
    <string name="calf_raise_details">4 x 6–10, 1 min 30 sec rest</string>
    <string name="standard_hyp_details">3–4 x 8–12, 1 min 30 sec rest</string>
    <string name="leg_heavy_hyp_details">3–4 x 10–15, 1 min 30 sec rest</string>
    <string name="save">Save</string>
    <string name="rest">Rest:</string>
    <string name="current_session">Current Session</string>
    <string name="add_set">Add Set</string>
    <string name="delete_set">Delete Set</string>
    <string name="weight">weight</string>
    <string name="reps">reps</string>
    <string name="prev_session">Previous Session</string>
    <string name="dynamic_string_label">Set %1d</string>
</resources>
