<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoutineActivity">

    <TextView
        android:id="@+id/upper_power_text"
        style="@style/generic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchDayActivity"
        android:padding="15dp"
        android:text="@string/upper_power"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/lower_power_text"
        style="@style/generic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchDayActivity"
        android:padding="15dp"
        android:text="@string/lower_power" />

    <TextView
        android:id="@+id/upper_hypertrophy_text"
        style="@style/generic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchDayActivity"
        android:padding="15dp"
        android:text="@string/upper_hypertrophy" />

    <TextView
        android:id="@+id/lower_hypertrophy_text"
        style="@style/generic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchDayActivity"
        android:padding="15dp"
        android:text="@string/lower_hypertrophy" />
</LinearLayout>