<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExerciseActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_session_label"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/current_session"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/add_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="addSetToSession"
        android:text="@string/add_set" />

    <Button
        android:id="@+id/delete_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="deleteSetInSession"
        android:text="@string/delete_set" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>